# dmg-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/: version.h.in
include/emulator/: apu.h  cartridge.h  common.h  cpu.h  dmg.h  gpu.h  host.h  joypad.h  mem_registers.h  memory.h  op.h  sdl2.h  time.h  timer.h
include/emulator/ops/: common.h
include/logging/: logging.h
src/: main.cpp
src/emulator/: apu.cpp  cartridge.cpp  common.cpp  cpu.cpp  dmg.cpp  gpu.cpp  joypad.cpp  memory.cpp  op.cpp  rom.cpp  sdl2.cpp  time.cpp  timer.cpp
src/emulator/ops/: common.cpp  ops_0x.cpp  ops_1x.cpp  ops_2x.cpp  ops_3x.cpp  ops_4x.cpp  ops_5x.cpp  ops_6x.cpp  ops_7x.cpp  ops_8x.cpp  ops_9x.cpp  ops_ax.cpp  ops_bx.cpp  ops_cx.cpp  ops_dx.cpp  ops_ex.cpp  ops_fx.cpp
src/emulator/ops/cb/: ops_0x.cpp  ops_1x.cpp  ops_2x.cpp  ops_3x.cpp  ops_4x.cpp  ops_5x.cpp  ops_6x.cpp  ops_7x.cpp  ops_8x.cpp  ops_9x.cpp  ops_ax.cpp  ops_bx.cpp  ops_cx.cpp  ops_dx.cpp  ops_ex.cpp  ops_fx.cpp
src/logging/: logging.cpp
tests/: CMakeLists.txt  basic.cpp
